--- a/pusulamiz-edebiyat/mobile/main.css
+++ b/pusulamiz-edebiyat/mobile/main.css
@@ -53,6 +53,7 @@
     right: 0;
     border-radius: 25px;
     background-color: var(--primary);
+    /* background: linear-gradient(0deg, var(--primary) 0%, transparent 100%); */
     display: flex;
     align-items: center;
     justify-content: center;
