--- a/pusulamiz-edebiyat/mobile/mobile.css
+++ b/pusulamiz-edebiyat/mobile/mobile.css
@@ -107,9 +107,6 @@ nav {
     border-bottom: 1px solid white;
 }
 
-#kagan {
-}
-
 #mobileMenu > a {
     width: calc(100% - 200px);
     height: 100%;
@@ -136,12 +133,12 @@ label[for="mobileTheme"]::before {
     height: 25px;
     border-radius: 50%;
     background-color: var(--primary);
-    transform: scale(0.8);
+    transform: translate(0%) scale(0.8);
     transition: 0.2s;
 }
 
 #mobileTheme:checked ~ label[for="mobileTheme"]::before {
-    transform: translate(100%) rotate(360deg) scale(0.8);
+    transform: translate(100%) scale(0.8);
 }
 
 #hamBtn:checked ~ #mobileMenu{
