--- a/pusulamiz-edebiyat/mobile/main.css
+++ b/pusulamiz-edebiyat/mobile/main.css
@@ -7,35 +7,36 @@
     font-size: 2rem;
 }
 
-.ilce details {
-    width: calc(50% + 50px);
-    max-width: 500px;
+.ilce {
+    width: 50%;
+    margin: auto;
+}
+
+.ilce .accordion {
     margin: auto;
     box-sizing: border-box;
     border-radius: 25px;
     margin: 10px auto;
-    padding: 15px 25px;
+    padding: 0;
     background-color: var(--primary);
+    overflow: hidden;
 }
 
-.ilce details[open] {
-    padding-bottom: 5px;
-}
-
-.ilce details summary {
+.ilce .accordion .summary {
     display: block;
     position: relative;
+    padding: 10px;
 }
 
-.ilce details summary::-webkit-details-marker {
-    display: none;
+.ilce .accordion .content {
+    padding: 5px;
 }
 
 .yazar {
     display: block;
     position: relative;
-    width: 100%;
-    margin: 25px 0;
+    width: 85%;
+    margin: 10px auto;
 }
 
 .yazar img {
@@ -46,25 +47,11 @@
 
 .yazar-info {
     position: absolute;
-    width: 100%;
     height: 20%;
     bottom: 0;
     left: 0;
     right: 0;
-    border-radius: 25px;
-    background-color: var(--primary);
-    /* background: linear-gradient(0deg, var(--primary) 0%, transparent 100%); */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 3vw;
-}
-
-.accordion {
-    overflow: hidden;
-    transition: 0.2s;
-}
-
-.summary {
-    cursor: pointer;
+    /* background-color: var(--primary); */
+    background: linear-gradient(0deg, var(--primary) 5%, transparent 100%);
+    font-size: 0.75rem;
 }
