Updating - Could not solve the problem about accordions and using default details elements

--- a/pusulamiz-edebiyat/mobile/mobile.css
+++ b/pusulamiz-edebiyat/mobile/mobile.css
@@ -168,3 +168,8 @@ label[for="mobileTheme"]::before {
     background-color: var(--primary);
     z-index: 1;
 }
+
+#kagan {
+    position: absolute;
+    bottom: 100px;
+}
