--- a/pusulamiz-edebiyat/mobile/main.css
+++ b/pusulamiz-edebiyat/mobile/main.css
@@ -5,53 +5,46 @@
 
 #home h1 {
     font-size: 2rem;
+    margin: 25px 0;
 }
 
 .ilce {
     width: 50%;
-    margin: auto;
+    margin: 0 auto;
+    padding: 0 10px;
+    background-color: var(--primary);
+    margin-bottom: 10px;
+    border-radius: 25px;
 }
 
-.ilce .accordion {
-    margin: auto;
-    box-sizing: border-box;
-    border-radius: 25px;
-    margin: 10px auto;
-    padding: 0;
-    background-color: var(--primary);
+.ilce details {
     overflow: hidden;
 }
 
-.ilce .accordion .summary {
-    display: block;
-    position: relative;
-    padding: 10px;
+.ilce details > summary {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    border-radius: 25px 25px 0 0;
 }
 
-.ilce .accordion .content {
-    padding: 5px;
-}
-
-.yazar {
-    display: block;
-    position: relative;
-    width: 85%;
-    margin: 10px auto;
+.ilce details > .content {
+    width: 100%;
 }
 
 .yazar img {
-    border-radius: 10%;
     width: 100%;
-    height: auto;
+    border-radius: 20px 20px 0 0;
 }
 
 .yazar-info {
-    position: absolute;
-    height: 20%;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    /* background-color: var(--primary); */
-    background: linear-gradient(0deg, var(--primary) 5%, transparent 100%);
-    font-size: 0.75rem;
+    font-size: 1rem;
+    margin-bottom: 10px;
+}
+
+.yazar-info p {
+    display: none;
 }
