--- a/orff-schulwerk/styles/main.css
+++ b/orff-schulwerk/styles/main.css
@@ -3,6 +3,10 @@
     font-family: "Poppins", sans-serif;
 }
 
+*, *::before, *::after {
+    transition: 0.2s;
+}
+
 a {
     text-decoration: none;
     color: #000;
@@ -45,17 +49,38 @@ header {
     font-weight: 500;
 }
 
+.dropbtn::before {
+    content: "";
+    display: inline-block;
+    position: relative;
+    left: -10px;
+    height: 16px;
+    width: 2px;
+    background-color: #000;
+    transform: scaleY(0);
+}
+
+.dropdown:hover .dropbtn::before {
+    transform: scaleY(1);
+}
+
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #fff;
     width: 200px;
-    box-shadow: 0 8px 16px 0 #00000033;
+    box-shadow: 0 10px 16px 0 #00000033;
+    border-radius: 0 0 25px 0;
 }
 
 .dropdown-content a {
     text-align: left;
     padding: 10px 15px;
+    transform: translateX(0);
+}
+
+.dropdown-content a:hover {
+    transform: translateX(10px);
 }
 
 .dropdown-content a:not(:last-child)::after {
@@ -67,7 +92,6 @@ header {
     height: 1px;
     background-color: #00000033;
     transform: scaleX(0);
-    transition: 0.2s;
 }
 
 .dropdown-content a:not(:last-child):hover::after{
