Update - Styling and other changes

--- a/orff-schulwerk/partners/turkey/style.css
+++ b/orff-schulwerk/partners/turkey/style.css
@@ -1,9 +1,10 @@
 #aosb {
-    background-image: url("https://i.pinimg.com/236x/b5/74/2a/b5742a8a20237c2e9d672544046b3f0c.jpg");
+    background-image: url("../../imgs/cigli-aosb.jpg");
+    background-position: center;
     font-size: 2rem;
 }
 
 #bilsem {
-    background-image: url("https://i.pinimg.com/236x/c2/ab/ad/c2abad1466f28ea6e61aebf931bc9cf5.jpg");
+    background-image: url("../../imgs/cigli-bilsem.jpg");
     font-size: 2rem;
 }
