--- a/orff-schulwerk/styles/main.css
+++ b/orff-schulwerk/styles/main.css
@@ -1,3 +1,9 @@
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css");
+
+@media only screen and (min-width: 769px) {
+    .mobile {display: none;}
+}
+
 :root {
     --primary-color: #02122e;
 }
@@ -10,6 +16,10 @@
 
 *, *::before, *::after {
     transition: 0.2s;
+}
+
+*:focus {
+    outline: none;
 }
 
 a {
@@ -30,9 +40,9 @@ header {
 }
 
 #navbar {
-    width: min(1000px, 100%);
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -77,6 +87,7 @@ header {
     width: 200px;
     box-shadow: 0 10px 10px 0 #0003;
     border-radius: 0 0 25px 0;
+    padding-top: 15px;
 }
 
 .dropdown-content a {
@@ -175,3 +186,5 @@ footer::after {
     font-size: 0.75rem;
     margin-top: 10px;
 }
+
+#links div.dropdown:nth-child(5) {display: none;}
