--- a/orff-schulwerk/styles/mobile.css
+++ b/orff-schulwerk/styles/mobile.css
@@ -127,3 +127,19 @@ details.dropD > summary {list-style: none;}
     width: calc(100% - 100px);
     border-left: none;
 }
+
+.parallax-content, .parallax-content * {font-size: 0.9rem;}
+
+.gallery {
+    width: min(100%, 500px);
+    height: 250px;
+}
+
+.gallery-imgs {height: 250px;}
+
+.slide img {height: 250px;}
+
+.gallery-nav {
+    width: min(calc(100% - 100px), 500px);
+    margin-top: -30px;
+}
