--- a/orff-schulwerk/mobilities/berlin/style.css
+++ b/orff-schulwerk/mobilities/berlin/style.css
@@ -1,3 +1,10 @@
 #berlin {
-    background-image: url("../../imgs/berlin.jpg");
+    background-image: url("https://i.pinimg.com/236x/67/df/87/67df872b61fc1bebe1c1b9ecf8f39893.jpg");
 }
+
+.gallery-imgs {width: 200%;}
+
+.slide {width: 50%;}
+
+#radio1:checked ~ .first {margin-left: 0;}
+#radio2:checked ~ .first {margin-left: -50%;}
