--- a/orff-schulwerk/social-media/style.css
+++ b/orff-schulwerk/social-media/style.css
@@ -4,12 +4,14 @@
 
 .parallax-title {height: 400px;}
 
-.parallax-content {
-    margin-top: 50px; margin-bottom: 100px;
-    padding-top: 50px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+@media only screen and (min-width: 769px) {
+    .parallax-content {
+        margin-top: 50px; margin-bottom: 100px;
+        padding-top: 50px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
 }
 
 .info {
@@ -40,12 +42,14 @@
 
 .account:not(:first-child) {margin-left: -250px;}
 
-.account:hover {transform: translateY(-75px);}
-.account:hover ~ .account {left: 150px;}
+@media only screen and (min-width: 769px) {
+    .account:hover {transform: translateY(-75px);}
+    .account:hover ~ .account {left: 150px;}
+}
 
-.facebook {background-color: #3b5998;}
-.twitter {background-color: #00aced;}
-.instagram {background-color: #e4405f;}
+.facebook {background: linear-gradient(145deg, #3f5fa3, #355089);}
+.twitter {background: linear-gradient(145deg, #00b8fe, #009bd5);}
+.instagram {background: linear-gradient(145deg, #f44466, #cd3a56);}
 
 .account .title {
     height: 100px;
@@ -70,3 +74,20 @@
 .facebook .img {background-image: url("../imgs/kavala3.jpg"); background-position: 25% 50%;}
 .twitter .img {background-image: url("../imgs/kavala2.jpg");}
 .instagram .img {background-image: url("../imgs/kavala1.jpg");}
+
+@media only screen and (max-width: 768px) {
+    .parallax-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 50px;
+    }
+
+    .accounts {flex-direction: column-reverse;}
+    .account {
+        height: 75px;
+        margin: 10px 0 !important;
+        padding-left: 10px;
+        box-shadow: none;
+    }
+}
