--- a/message-app/style/login.css
+++ b/message-app/style/login.css
@@ -1,34 +1,51 @@
 .message-app-login {
-    height: 350px; display: flex;
-    background-color: var(--color-dark);
+    width: min(100%, 800px); height: 500px;
+    display: flex; flex-wrap: wrap;
+    align-items: center;
+    box-shadow: 10px 10px 30px var(--color-dark);
+}
+
+.message-app-login > div {
+    flex: 1 0 10rem;
+    height: 100%;
 }
 
 .message-app-login .login-content {
-    display: flex; gap: 25px;
-    flex-direction: column;
-    justify-content: center;
-    padding: 50px;
+    width: 100%; min-width: 450px;
+    background-color: var(--color-dark);
+    color: white;
+    display: flex; flex-direction: column;
+    justify-content: center; gap: 30px;
+    box-sizing: border-box; padding: 50px;
 }
 
-.message-app-login .login-content .login-input {display: flex; gap: 10px;}
+.message-app-login .login-content .login-input {
+    display: flex; flex-direction: column;
+    gap: 10px;
+}
 
 .message-app-login .login-content .login-input input {
-    height: 30px; width: 200px;
-    border: none; border-bottom: 2px solid white;
     background-color: inherit;
+    border: none; border-bottom: 2px solid white;
+    width: 100%; height: 30px;
+    font-size: 1rem;
 }
 
 .message-app-login .login-content .login-input .login-submit {
-    height: 100%; width: 75px;
-    background-color: white; color: var(--color-dark);
+    width: 90px; height: 40px;
+    border: 2px solid white;
     display: grid; place-items: center;
     cursor: pointer;
 }
+.message-app-login .login-content .login-input .login-submit:hover {
+    box-shadow: 0 5px 10px var(--color-light);
+}
 
 .message-app-login .login-image {
-    width: 300px; height: 100%;
+    min-width: 250px;
 }
+
 .message-app-login .login-image img {
-    width: 100%; height: 100%;
+    width: 100%; height: 500px;
     object-fit: cover;
 }
