Bug-Fix on sending images

--- a/message-app/style/style.css
+++ b/message-app/style/style.css
@@ -102,6 +102,7 @@ input, button {color: white; font-family: "Open Sans";}
     cursor: pointer;
     grid-column: 1 / -1;
 }
+.container-header .settings .options .github-link a {color: white;}
 
 .container-body {
     background-color: var(--message-section);
@@ -265,7 +266,6 @@ input, button {color: white; font-family: "Open Sans";}
     position: fixed;
     display: flex; flex-direction: column;
     align-items: center; gap: 5px;
-    filter: drop-shadow(0 5px 10px var(--color-dark));
     transition: 0s;
     z-index: -1000;
 }
@@ -321,6 +321,7 @@ input, button {color: white; font-family: "Open Sans";}
     box-sizing: border-box; padding: 5px;
     position: relative;
     color: var(--color-light);
+    z-index: 3;
 }
 
 .container-footer > span {display: grid; place-items: center;}
